server/crates/djinn-control-plane/tests/snapshots/task_tools__task_activity_list_response.snap
---
source: crates/djinn-control-plane/tests/task_tools.rs
expression: activity
---
{
  "entries": [
    {
      "id": "[UUID]",
      "task_id": "[UUID]",
      "actor_id": "[UUID]",
      "actor_role": "user",
      "event_type": "comment",
      "payload": {
        "body": "hello"
      },
      "created_at": "[TIMESTAMP]"
    }
  ],
  "count": 1
}
