server/crates/djinn-control-plane/tests/snapshots/task_tools__task_blockers_list_response.snap
---
source: crates/djinn-control-plane/tests/task_tools.rs
expression: blockers
---
{
  "blockers": [
    {
      "blocking_task_id": "[UUID]",
      "blocking_task_short_id": "[SHORT_ID]",
      "blocking_task_title": "test-task",
      "blocking_task_status": "open",
      "resolved": false
    }
  ]
}
