server/crates/djinn-control-plane/tests/snapshots/task_tools__task_count_grouped_by_priority_response.snap
---
source: crates/djinn-control-plane/tests/task_tools.rs
expression: priority_grouped
---
{
  "groups": [
    {
      "key": "2",
      "count": 2
    }
  ]
}
