server/crates/djinn-control-plane/tests/snapshots/task_tools__task_count_grouped_by_status_response.snap
---
source: crates/djinn-control-plane/tests/task_tools.rs
expression: grouped
---
{
  "groups": [
    {
      "key": "in_progress",
      "count": 1
    },
    {
      "key": "open",
      "count": 1
    }
  ]
}
