server/crates/djinn-control-plane/tests/snapshots/task_tools__task_list_response.snap
---
source: crates/djinn-control-plane/tests/task_tools.rs
expression: paged
---
{
  "tasks": [
    {
      "id": "[UUID]",
      "short_id": "[SHORT_ID]",
      "epic_id": "[UUID]",
      "title": "alpha ready",
      "description": "desc",
      "design": "design",
      "issue_type": "task",
      "status": "in_progress",
      "priority": 1,
      "owner": "owner",
      "labels": [],
      "memory_refs": [],
      "acceptance_criteria": [
        "{\"met\":false,\"description\":\"default\"}"
      ],
      "reopen_count": 0,
      "continuation_count": 0,
      "verification_failure_count": 0,
      "total_reopen_count": 0,
      "total_verification_failure_count": 0,
      "intervention_count": 0,
      "created_at": "[TIMESTAMP]",
      "updated_at": "[TIMESTAMP]",
      "closed_at": null,
      "close_reason": null,
      "merge_commit_sha": null,
      "unresolved_blocker_count": 0,
      "created_by_user_id": null,
      "session_count": 0
    }
  ],
  "total_count": 3,
  "limit": 1,
  "offset": 0,
  "has_more": true
}
