server/crates/djinn-control-plane/tests/snapshots/task_tools__task_show_response.snap
---
source: crates/djinn-control-plane/tests/task_tools.rs
expression: ok
---
{
  "id": "[UUID]",
  "short_id": "[SHORT_ID]",
  "epic_id": "[UUID]",
  "title": "test-task",
  "description": "test task description",
  "design": "test task design",
  "issue_type": "task",
  "status": "open",
  "priority": 2,
  "owner": "test-owner",
  "labels": [],
  "memory_refs": [],
  "acceptance_criteria": [
    "{\"met\":false,\"description\":\"default test criterion\"}"
  ],
  "reopen_count": 0,
  "continuation_count": 0,
  "verification_failure_count": 0,
  "total_reopen_count": 0,
  "total_verification_failure_count": 0,
  "intervention_count": 0,
  "created_at": "[TIMESTAMP]",
  "updated_at": "[TIMESTAMP]",
  "closed_at": null,
  "close_reason": null,
  "merge_commit_sha": null,
  "created_by_user_id": null,
  "session_count": 0,
  "active_session": null
}
